--- a/path/src/Insurance/ContentBundle/Resources/public/css/fixes.css
+++ b/path/src/Insurance/ContentBundle/Resources/public/css/fixes.css
@@ -1034,7 +1034,7 @@ form.personal_data .line.adres {
 /*-------------------------------------- FINISH PAGE --------------------------------- */
 /*------------------------------------------------------------------------------------------- */   
 
-.text_content span {
+.text_content span.success {
     float:left;
     width:85px;
 	height:70px;
@@ -1044,3 +1044,145 @@ form.personal_data .line.adres {
       background-color: transparent;
 	margin-right:20px;
 	margin-top: 6px;}
+	
+/*------------------------------------------------------------------------------------------- */
+/*-------------------------------------- FAQ PAGE --------------------------------- */
+/*------------------------------------------------------------------------------------------- */   	
+	
+.text_content .boxFaq {
+display:block;
+margin-bottom: 20px;
+margin-left:10px;
+}
+	  
+.text_content .boxFaq p {
+	text-align: justify;
+	color: #3F3F3F;
+    background-color: white;
+	border: 2px solid #FFB120;
+    border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -khtml-border-radius: 5px;
+    padding:20px;
+    margin:20px 35px 40px 25px;
+    display: none;
+}
+
+.text_content .boxFaq p a{
+	font-size: 14px;
+	border-bottom: none;
+	font-weight:400;
+	margin:0;
+}
+
+.text_content .boxFaq h2 {
+	color: #3F3F3F;
+    font-style:normal;
+    margin-bottom:0px;
+    font-size: 16px;
+	font-family: Arial Bold, Helvetica, sans-serif;
+	cursor:pointer;
+}
+
+.text_content .boxFaq a {
+	font-family: Arial Bold, Helvetica, sans-serif;
+    font-size: 16px;
+    cursor:pointer;
+	font-weight: 600;
+	color: #ffa600;
+	border-bottom: 1px dashed #ffa600;
+	margin:0 5px 10px;
+	-webkit-transition: all 300ms ease;
+    -moz-transition: all 300ms ease;
+    -o-transition: all 300ms ease;
+	transition:  all 300ms ease;
+}
+
+.text_content .boxFaq a:hover {
+	border-bottom: 0px dashed #ffa600;
+	color:#3F3F3F; 
+}
+
+.text_content .boxFaq a.active {
+	border-bottom: none;
+	color:#3F3F3F;
+}
+
+.text_content .boxFaq span.plus {
+    float:none;
+    width:16px;
+	height:15px;
+    position: relative;
+    top:-1px;
+    right:0px;
+    display: inline-block;
+    vertical-align: middle;
+	margin:0;
+	background-image: url(../images/sprite.png);
+    background-position: -343px -31px;
+    background-repeat: no-repeat;
+    background-color: transparent;
+}
+.text_content .boxFaq span.minus {
+    float:none;
+    width:16px;
+	height:15px;
+    position: relative;
+    top:-1px;
+    right:0px;
+    display: inline-block;
+    vertical-align: middle;
+	margin:0;
+	background-image: url(../images/sprite.png);
+    background-position: -359px -31px;
+    background-repeat: no-repeat;
+    background-color: transparent;
+}
+
+/*------------------------------------------------------------------------------------------- */
+/*-------------------------------------- CONTACTS PAGE --------------------------------- */
+/*------------------------------------------------------------------------------------------- */  
+
+
+.text_content .contacts {
+	margin-left: 0px;
+	display: inline-block;
+}
+
+.text_content .contacts  p {
+	font-size: 16px;
+	font-family: Arial;
+	font-weight: normal;
+	margin-bottom: 20px;
+	padding-top: 4px;
+}
+
+.text_content .contacts span.ico {
+	width:39px;
+	height:24px;
+	vertical-align: middle;
+	background-image: url(../images/sprite.png);
+    background-position: -235px -601px;
+    background-color: transparent;
+	margin-right:10px;
+	display: inline-block;
+}
+
+.text_content .contacts span.bold {
+	font-weight: bold;
+	font-size: 16px;
+	background-image: none;
+}
+
+.text_content .contacts h3 {
+	font-size: 18px;
+	font-weight: bold;
+	line-height: 14px;
+}
+
+
+.text_content .map {
+	float: right;
+	display: inline-block;
+}
