--- a/path/src/Insurance/ContentBundle/Resources/views/Default/contacts.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/contacts.html.twig
@@ -1,11 +1,26 @@
 {% extends 'InsuranceContentBundle::base.html.twig' %}
 {% block content %}
-    <section>
-        <div class="content">
-            <div class="limit">
-            <h1>Контакты</h1>
-            </div>
+ <section class="content">  
+        <div class="limit text_content"><!-- .text_content for text-page only -->  
+	                    <div class="title">
+                        <h1>Контакты</h1>
+	                    </div> 
+					<div class="contacts">
+					<h3>Call-центр:</h3>
+					<p><span class="ico"></span> (066) 931-06-06 (Без выходных)</p>
+					<h3>Офис:</h3>
+					<p>Киев, просп. Владимира Маяковского, 26, оф. 3</p>
+					<p>
+					<b>График работы:</b><br />
+					Пн-Пт: 10:00 - 19:00<br />
+					Сб-Вс: 10:00 - 18:00
+					</p>
+					</div>
+					<div class="map">
+						<script type="text/javascript" charset="utf-8" src="//api-maps.yandex.ru/services/constructor/1.0/js/?sid=cBc1e8QnXZx7_J8h3Qh0evPDQ68epIAE&width=450&height=240"></script>
+					</div>
         </div>
+					 <div class="footer-push"></div>
     </section>
 </section>
 {% endblock %}
