--- a/path/src/Insurance/ContentBundle/Resources/views/Default/contacts.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/contacts.html.twig
@@ -5,9 +5,12 @@
 	                    <div class="title">
                         <h1>Контакты</h1>
 	                    </div> 
-					<div class="contacts">
+					<div class="contact_left">
+					<div class="call_center">
 					<h3>Call-центр:</h3>
 					<p><span class="ico"></span> (066) 931-06-06 (Без выходных)</p>
+					</div>
+					<div class="office">
 					<h3>Офис:</h3>
 					<p>Киев, просп. Владимира Маяковского, 26, оф. 3</p>
 					<p>
@@ -16,7 +19,8 @@
 					Сб-Вс: 10:00 - 18:00
 					</p>
 					</div>
-					<div class="map">
+					</div>
+					<div class="contact_right">
 						<script type="text/javascript" charset="utf-8" src="//api-maps.yandex.ru/services/constructor/1.0/js/?sid=cBc1e8QnXZx7_J8h3Qh0evPDQ68epIAE&width=450&height=240"></script>
 					</div>
         </div>
