--- a/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
@@ -107,11 +107,12 @@
                     <li>
                         <a href="{{path('about')}}">Кто мы такие?<span class="arrow"><span class="delim"></span></a>
 						<ul class="inner_menu">
-						    <li><a href="{{path('about')}}">О сервисе<span class="delimiter"></span></a>
+						    <li><a href="{{path('about')}}">О проекте<span class="delimiter"></span></a>
                                 <div class="shadow"></div>
                             </li>
                             <li><a href="">О нашем страховом партнере<span class="delimiter"></span></a></li>
 							<li><a href="{{path('faq')}}">Ответы на Ваши вопросы<span class="delimiter"></span></a></li>
+							<li><a href="{{path('contacts')}}">Контакты<span class="delimiter"></span></a></li>
 							</ul>
                     </li>
 					<div class="shadow"></div>
