the rest of pages

--- a/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
@@ -95,7 +95,7 @@
                     </li>
 
                     <li>
-                        <a href="{{path('goodtoknow')}}">Полезно знать<span class="arrow"></span><span class="delim"></span></a>
+                        <a href="{{path('osago-info')}}">Полезно знать<span class="arrow"></span><span class="delim"></span></a>
 						<ul class="inner_menu">
                             <li>
                                 <a href="{{path('osago-info')}}">Что такое ОСАГО?<span class="delimiter"></span></a>
@@ -125,7 +125,7 @@
     	<div class="limit">
             <div class="column first">
                 <div class="title">О нас</div>
-                <a href="{{path('about')}}"><span></span>Наш сервис</a>
+                <a href="{{path('about')}}"><span></span>О проекте</a>
                 <a href="{{path('contacts')}}"><span></span>Контакты</a>
                 <a href="#" class="call_link"><span></span>Обратный звонок</a>
 				<a href="#" class="question_link"><span></span>Задать вопрос</a>
