--- a/path/src/Insurance/ContentBundle/Resources/views/Default/about.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/about.html.twig
@@ -3,8 +3,8 @@
  <section class="content">  
         <div class="limit text_content"><!-- .text_content for text-page only -->  
                     <div class="title">
-                        <h1>О сервисе</h1>
-                        <h3>Страховой брокер «Полисбук» – это путеводитель на страховом рынке, защищающий Ваши интересы.</h3>
+                        <h1>О проекте</h1>
+                        <h3>"ПолисМаркет" - это Ваш виртуальный страховой агент.</h3>
                     </div>                    
                     <p>Современный рынок страховых услуг в России характеризуется высокой степенью конкуренции и наличием большого количества страховых компаний.  Вам как владельцу имуществом, который хочет предотвратить неприятности, сложно разобраться в том, что кроется за высокой или низкой ценой страховки, предлагаемой страховщиками.</p>
                     <p>Принимая решение о заключении страхового договора с какой-либо страховой компанией, Вы основываетесь на массе различных критериев, таких как репутация компании, наличие рекомендаций знакомых, размер тарифов, отзывы в прессе и интернете и т.д. Далеко не каждый может разобраться во всех тонкостях страховых условий, да и времени на это можно потратить много.</p>
