--- a/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
@@ -157,7 +157,7 @@
             <div class="limit">
                 <a href="" class="footer_logo"></a>
                 <div class="copyright">© 2013 ПолисМаркет<br />Все права защищены законом</div>
-                <div class="counter_container"><img src="{{asset('bundles/insurancecontent/images/counter_example.png')}}" alt="img" /></div>
+                <div class="counter_container"><a href="">Пользовательское соглашение</a></div>
                 <div style="clear: both;"></div>
             </div>
          </div>
