--- a/path/src/Insurance/ContentBundle/Resources/views/Default/index.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/index.html.twig
@@ -22,8 +22,12 @@ jQuery(function(){
         <section class="content">
                 <div class="limit">
                     <div class="calculator_box">
+					<span class="first_part_slogon">Укажите автомобиль и</span>
+					<h1>рассчитайте</span><br/><span class="second">стоимость осаго</span></h1>
+					<h2 class="fivemin">Оформить полис онлайн<br/><span>всего за 5 минут</span></h2>
                         <!-- counter -->
                         <div class="count_down_container">
+							<div class="discount_phrase">Воспользуйтесь скидкой до 25%</div>
                             <div class="label">До конца акции осталось</div>
                             <div class="counter">
                                 <div class="hours">
