--- a/path/src/Insurance/ContentBundle/Resources/views/Helper/userPolicy.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Helper/userPolicy.html.twig
@@ -3,20 +3,17 @@
  <head>
    <style>
 .our_logo {
+	width: 7.179em;
+	height: 1.321em;
     display: inline-block;
-    position: relative;
     float: left;
-    width: 338px;
-    height: 62px;
-       padding-top: 40px;
+       padding-top: 0.714em;
 }
 .bbs_logo {
+	width: 5.786em;
+	height: 2.214em;
     display: inline-block;
-    position: relative;
     float: right;
-    width: 272px;
-    height: 105px;
-    background-color: blue;
 }
 
 .our_logo img, .bbs_logo img {
@@ -28,13 +25,13 @@
 }
 
 	.sign-info h1 {
-		font:normal 28px 'PT Serif',arial,serif;
+		font:normal 22pt 'PT Serif',arial,serif;
 		margin:1em 0 .2em 0;
 		padding:0;
 	}
 
 	.sign-info h2 {
-		font: bold 18px arial,serif;
+		font: bold 14pt arial,serif;
 		margin:.5em 0;
 		padding:0;
 		color:#333;
@@ -43,15 +40,15 @@
 	}
 
 	.sign-info table {
-    border-top: 1px dashed silver;
-    border-left:1px dashed silver;
+    border-top: 0.03em dashed silver;
+    border-left: 0.03em dashed silver;
     border-right: 0; border-bottom: 0;
 	}
 
 	.sign-info table td{
     border-top:0; border-left: 0;
-    border-right: 1px dashed silver;
-    border-bottom: 1px dashed silver;
+    border-right: 0.03em dashed silver;
+    border-bottom: 0.03em dashed silver;
     padding:.75em 1.5em;
     text-align: justify;
 	}
@@ -63,41 +60,14 @@
 		.sign-info table table td {
 			padding:0;
 		}
- .policy-default {
-        width: auto; color: #555;
-        height: 250px; overflow: auto;
-        border: 1px solid #ddd; padding: 10px 25px;
-      }
-      .policy-default h1 {
-        font-family: Georgia; font-weight: normal;
-        margin: .5em 0; padding: inherit;
-      }
-      .policy-default p {
-        margin: .8em 0;
-      }
-      .policy-default table td {
-        padding: 7px 12px; line-height: 1.1em;
-        vertical-align: middle;
-      }
-      .policy-default table td.bordered {
-        border: 1px solid #ddd;
-      }
-      .policy-default span.highlight {
-        color: black; font-weight: bold; font-size: 123.1%;
-      }
-      .policy-default span.label {
-        font-size: 85%;
-      }
-      .policy-default span.bordered {
-        padding: 2px 5px; border: 1px solid #ddd;
-      }
+
    </style>
   </head>
 <body>
 <div id="content">
             <div style="margin: 0 20px;">
-                <div class="our_logo"><img src="http://gyazo.com/cce0795ba44d3e2a043dc21a7bd00fb8.png" /></div>
-                <div class="bbs_logo"><img src="http://gyazo.com/fdd8520123a08b5a7303061e4938add0.png" /></div>
+                <div class="our_logo"><img src="{{asset('bundles/insurancecontent/images/our_logo.png')}}" /></div>
+                <div class="bbs_logo"><img src="{{asset('bundles/insurancecontent/images/bbs_logo.png')}}" /></div>
                     <div style="clear: both;"></div>
 <div class="br-block">
   <i class="cn tl"></i>
