--- a/path/src/Insurance/ContentBundle/Resources/views/Helper/userPolicy.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Helper/userPolicy.html.twig
@@ -9,6 +9,7 @@
     float: left;
        padding-top: 0.714em;
 }
+
 .bbs_logo {
 	width: 5.786em;
 	height: 2.214em;
@@ -60,7 +61,34 @@
 		.sign-info table table td {
 			padding:0;
 		}
-
+ .policy-default {
+        width: auto; color: #555;
+        height: 250px; overflow: auto;
+        border: 1px solid #ddd; padding: 10px 25px;
+      }
+      .policy-default h1 {
+        font-family: Georgia; font-weight: normal;
+        margin: .5em 0; padding: inherit;
+      }
+      .policy-default p {
+        margin: .8em 0;
+      }
+      .policy-default table td {
+        padding: 7px 12px; line-height: 1.1em;
+        vertical-align: middle;
+      }
+      .policy-default table td.bordered {
+        border: 1px solid #ddd;
+      }
+      .policy-default span.highlight {
+        color: black; font-weight: bold; font-size: 123.1%;
+      }
+      .policy-default span.label {
+        font-size: 85%;
+      }
+      .policy-default span.bordered {
+        padding: 2px 5px; border: 1px solid #ddd;
+      }
    </style>
   </head>
 <body>
@@ -69,6 +97,7 @@
                 <div class="our_logo"><img src="{{asset('bundles/insurancecontent/images/our_logo.png')}}" /></div>
                 <div class="bbs_logo"><img src="{{asset('bundles/insurancecontent/images/bbs_logo.png')}}" /></div>
                     <div style="clear: both;"></div>
+					
 <div class="br-block">
   <i class="cn tl"></i>
   <i class="cn tr"></i>
