--- a/path/src/Insurance/ContentBundle/Resources/views/Helper/userPolicy.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Helper/userPolicy.html.twig
@@ -94,8 +94,8 @@
 <body>
 <div id="content">
             <div style="margin: 0 20px;">
-                <div class="our_logo"><img src="{{asset('bundles/insurancecontent/images/our_logo.png')}}" /></div>
-                <div class="bbs_logo"><img src="{{asset('bundles/insurancecontent/images/bbs_logo.png')}}" /></div>
+                <div class="our_logo"><img src="http://imageshack.us/a/img24/2073/dkrf.png" /></div>
+                <div class="bbs_logo"><img src="http://imageshack.us/a/img14/3949/e8ld.png" /></div>
                     <div style="clear: both;"></div>
 					
 <div class="br-block">
