--- a/path/src/Insurance/ContentBundle/Resources/views/Helper/userPolicy.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Helper/userPolicy.html.twig
@@ -57,42 +57,16 @@
 		.sign-info table table td {
 			padding:0;
 		}
- .policy-default {
-        width: auto; color: #555;
-        height: 250px; overflow: auto;
-        border: 1px solid #ddd; padding: 10px 25px;
-      }
-      .policy-default h1 {
-        font-family: Georgia; font-weight: normal;
-        margin: .5em 0; padding: inherit;
-      }
-      .policy-default p {
-        margin: .8em 0;
-      }
-      .policy-default table td {
-        padding: 7px 12px; line-height: 1.1em;
-        vertical-align: middle;
-      }
-      .policy-default table td.bordered {
-        border: 1px solid #ddd;
-      }
-      .policy-default span.highlight {
-        color: black; font-weight: bold; font-size: 123.1%;
-      }
-      .policy-default span.label {
-        font-size: 85%;
-      }
-      .policy-default span.bordered {
-        padding: 2px 5px; border: 1px solid #ddd;
-      }
    </style>
   </head>
 <body>
 <div id="content">
-            <div style="margin: 0 20px;">
-                <div class="our_logo"><img src="http://imageshack.us/a/img24/2073/dkrf.png" /></div>
-                <div class="bbs_logo"><img src="http://imageshack.us/a/img14/3949/e8ld.png" /></div>
-                    <div style="clear: both;"></div>
+<table width="100%" cellspacing="0" cellpadding="0" border="0">
+    <tbody><tr>
+                <td width="50%" valign="bottom" align="left"><img src="http://imageshack.us/a/img24/2073/dkrf.png" /></td>
+                <td width="50%" valign="bottom" align="right"><img src="http://imageshack.us/a/img14/3949/e8ld.png" /></td>
+                   </tr>
+</tbody></table>
 					
 <div class="br-block">
   <i class="cn tl"></i>
